common code pushed into common-info
